--- a/less/emeraldwalk.code_playground.less
+++ b/less/emeraldwalk.code_playground.less
@@ -10,7 +10,9 @@
 	}
 }
 .ew-ace-editor {
-	display: block;
-	height: 300px;
-	width: 400px;
+	.ace_editor {
+		display: block;
+		height: 300px;
+		width: 400px;
+	}
 }
