--- a/less/emeraldwalk.code_playground.less
+++ b/less/emeraldwalk.code_playground.less
@@ -1,18 +1,44 @@
-.split-editor {
+body {
+	margin: 0;
+}
+.pull-left {
+	float: left;
+}
+.pull-right {
+	float: right;
+}
+.clearfix {
 	clear: both;
 	&:after {
 		display: block;
 		clear: both;
 		content: ' ';
 	}
+}
+.split-editor {
+	width: 800px;
+	.clearfix;
 	.ew-ace-editor {
 		float: left;
 	}
 }
 .ew-ace-editor {
+	h2 {
+		margin: 2px 0;
+	}
 	.ace_editor {
 		display: block;
-		height: 300px;
+		height: 200px;
 		width: 400px;
 	}
+}
+.output {
+	h2 {
+		margin: 2px 0;
+	}
+	width: calc(100% ~'-' 800px);
+}
+.ewCodeSample iframe {
+	width: 100%;
+	height: 800px;
 }
